packages/css/src/components/description-list/description-list.scss
/**
 * @license EUPL-1.2+
 * Copyright Gemeente Amsterdam
 */

@use "../../common/breakpoint" as *;
@use "../../common/hyphenation" as *;
@use "../../common/resets" as *;
@use "../../common/text-rendering" as *;

.ams-description-list {
  @include reset-dl;

  box-sizing: border-box;
  color: var(--ams-description-list-color);
  column-gap: var(--ams-description-list-column-gap);
  display: grid;
  font-family: var(--ams-description-list-font-family);
  font-size: var(--ams-description-list-font-size);
  line-height: var(--ams-description-list-line-height);

  @include hyphenation;
  @include text-rendering;
}

@media screen and (min-width: $ams-breakpoint-medium) {
  .ams-description-list,
  .ams-description-list__section {
    grid-template-columns: auto 1fr;
  }

  .ams-description-list--narrow,
  .ams-description-list--narrow .ams-description-list__section {
    grid-template-columns: var(--ams-description-list-narrow-grid-template-columns);
  }

  .ams-description-list--medium,
  .ams-description-list--medium .ams-description-list__section {
    grid-template-columns: var(--ams-description-list-medium-grid-template-columns);
  }

  .ams-description-list--wide,
  .ams-description-list--wide .ams-description-list__section {
    grid-template-columns: var(--ams-description-list-wide-grid-template-columns);
  }
}

.ams-description-list--inverse {
  color: var(--ams-description-list-inverse-color);
}

.ams-description-list__term {
  font-weight: var(--ams-description-list-term-font-weight);

  + .ams-description-list__description {
    margin-block-start: var(--ams-description-list-description-first-of-consecutive-margin-block-start);
  }

  @media screen and (min-width: $ams-breakpoint-medium) {
    grid-column-start: 1;

    + .ams-description-list__description {
      margin-block-start: initial;
    }
  }
}

.ams-description-list__section {
  + .ams-description-list__section,
  + .ams-description-list__term {
    margin-block-start: var(--ams-description-list-term-first-of-consecutive-margin-block-start);
  }

  @media screen and (min-width: $ams-breakpoint-medium) {
    column-gap: var(--ams-description-list-column-gap);
    display: grid;
    grid-column: span 2;

    + .ams-description-list__section,
    + .ams-description-list__term {
      margin-block-start: initial;
    }

    > :only-of-type {
      grid-row: 1 / 9;
    }
  }
}

/* stylelint-disable-next-line  no-descending-specificity */
.ams-description-list__description {
  @include reset-dd;

  font-weight: var(--ams-description-list-description-font-weight);

  + .ams-description-list__section,
  + .ams-description-list__term {
    margin-block-start: var(--ams-description-list-term-first-of-consecutive-margin-block-start);
  }

  @media screen and (min-width: $ams-breakpoint-medium) {
    grid-column-start: 2;

    + .ams-description-list__section,
    + .ams-description-list__term {
      margin-block-start: initial;
    }
  }
}

